[project]
name = "traveling-salesman"
description = "Traveling Salesman (TSP) environment for verifiers/Prime-RL."
tags = ["tsp", "rl", "graphs", "routing", "eval"]
version = "0.1.2"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.7.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "traveling_salesman.py",
    "pyproject.toml",
    "README.md",
    "outputs/.gitkeep",
]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
